# privatemode-document-store-demo

./: INSTALL.md  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: retrieval-api.md
privatemode/: __init__.py
privatemode/document_store/: __init__.py  __main__.py  app.py  auth.py  auth_test.py  fts.py  fts_test.py  gunicorn_main.py  hybrid_db.py  hybrid_db_chroma.py  hybrid_db_qdrant.py  query_advanced.py  test_hybrid_db.py
scripts/: venv.rc
scripts/setup/linux/: install.sh  uninstall.sh
scripts/setup/macos/: install.sh  uninstall.sh
scripts/setup/windows/: install.ps1  uninstall.ps1
tests/: helper.py  test_health.py  test_retrieval_query.py  test_store_document.py
tests/e2e/: large_doc.md  store_large_doc.sh
tests/smoke/documents/: reset.sh  retrieve.sh  store.sh
tests/smoke/full_documents/: delete.sh  get.sh  run_all.sh  store.sh
